--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Phaser.js</title>
+    <title>Juego de auto saltarín</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="mobile-web-app-capable" content="yes">
+	<link rel="icon" sizes="128x128" href="icon.png">
     <link type="text/css" rel="stylesheet" href="css/style.css">
+	<script>
+		window.scrollTo(0,1);
+	</script>   
   </head>
   
   <body>
