--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="icon" sizes="128x128" href="icon.png">
+	<link href="//fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">  
     <link type="text/css" rel="stylesheet" href="css/style.css">
 	<script>
 		window.scrollTo(0,1);
