--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     
     <script src="js/boot.js"></script>
     <script src="js/load.js"></script>
-    <script src="js/play.js"></script>
-    
+    <script src="js/menu.js"></script>
+	<script src="js/play.js"></script>    
     <script src="js/main.js"></script>
   </body>
 </html>
