--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Juego de auto saltarín</title>
+    <title>Duster Gamer / Dile sí a los caminos de la vida</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="icon" sizes="128x128" href="icon.png">
